# personalwebsite

./: .gitignore  Cargo.toml  LICENSE  README.md  migrate.sh
.github/workflows/: rust-clippy.yml
migrations/: 20220624205709_personal_website.down.sql  20220624205709_personal_website.up.sql
migrations/2022-05-06-222352_blog_posts/: up.sql
src/: logging.rs  main.rs  models.rs  schema.rs
static/: base.css  blog.css
templates/: 404.html  base.html  blog.html  blogpost.html  index.html
