[package]
name = "personalwebsite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
tokio = { version = "1.0", features = ["full"] }
askama = "0.11.1"
serde = "1.0.136"
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
colored = "2.0.0"
chrono = "0.4"
dotenv = "0.15.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
base64 = "0.13.0"